fix: Image formatting issue causing it to stretch

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,10 @@
 .header {
     height: 34vw;
     margin: 30px auto;
-    background: url("/header_img.png") no-repeat;
-    
-    background-size: contain;
+    background: url("public/header_img.jpg") no-repeat;    
+    background-size: cover;
     position: relative;
+    border-radius: 20px;
 }
 
 .header-contents {
